#3-Connect-2-device-with-TCP/IP

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -27,12 +27,29 @@
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>Url</string>
+          <string>LocalHost : </string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="lineEdit"/>
+        <widget class="QLineEdit" name="lineLocal"/>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>Port :</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="linePort">
+         <property name="maximumSize">
+          <size>
+           <width>100</width>
+           <height>16777215</height>
+          </size>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="bntConnect">
